# OPPPO

lab4_refactoring/: input.txt
lab4_refactoring/lib/: CMakeLists.txt  geometrys.cpp  geometrys.h  list.cpp  list.h  maincycle.cpp  maincycle.h
lab5_tests/tests/: CMakeLists.txt  main_test.cpp
src/: main.cpp
